docs/dev_versioned_docs/version-0.0.2/index.mdx
---
id: development
title: Development
sidebar_position: 1
---

# Development Guide

Welcome to the ClickUp MCP Server development guide! This section provides comprehensive information for developers who want to understand, modify, or contribute to the project.

## Getting Started

If you're new to the project, we recommend starting with these sections:

- [Requirements](./requirements.mdx) - Development environment prerequisites
- [Development Workflow](./workflow.mdx) - How to set up and contribute to the project
- [Coding Style and Rules](./coding-style.mdx) - Coding conventions used in the project

## Going Deeper

Once you're familiar with the basics, you can explore:

- [Software Architecture](./architecture.mdx) - Overview of the project architecture
- [CI/CD Workflows](./ci-cd.mdx) - Continuous Integration and Deployment processes

## Contributing

We welcome contributions! Before submitting code, please make sure you've read the [Contributing Guide](/docs/0.0.2/contribute) as well as the detailed development sections in this guide.
