docs/dev_versioned_docs/version-0.1.0/index.mdx
---
id: development
title: Development
sidebar_position: 1
---

# Development Guide

Welcome to the ClickUp MCP Server development guide! This section provides comprehensive information for developers who want to understand, modify, or contribute to the project.

## Getting Started

If you're new to the project, we recommend starting with these sections:

- [Development Workflow](./workflow.mdx) - How to set up and contribute to the project

## Development Guidelines

Centralized standards and best practices for building and maintaining this project:

- [Development Guidelines home](guidelines/index.mdx)
- [Requirements](guidelines/requirements.mdx)
- [Coding Styles and Rules](guidelines/coding-style.mdx)
- [Testing Strategy](guidelines/testing-strategy.mdx)
- [MCP Tool Development Guidelines](guidelines/mcp-tool-development.mdx)

:::tip Quick links (Architecture deep dives)
- [Centralized Error Handling](./architecture/error-handling.mdx)
- [Models — DTO vs Domain vs MCP I/O](./architecture/models.mdx)
- [Software Architecture Overview](./architecture/index.mdx)
:::

:::tip Quick links (Guidelines)
- [MCP Tool Development Guidelines](guidelines/mcp-tool-development.mdx)
:::

## Going Deeper

Once you're familiar with the basics, you can explore:

- [Software Architecture](./architecture/index.mdx) - Overview of the project architecture
- [CI/CD Workflows](./ci-cd/index.mdx) - Continuous Integration and Deployment processes

:::info How to preview docs locally
From the repo root, run your normal docs command (pnpm/yarn/npm) to start Docusaurus and preview these pages. If you use pnpm:

```bash
pnpm --filter docs dev
```
:::

## Contributing

We welcome contributions! Before submitting code, please make sure you've read the [Contributing Guide](/docs/next/contribute) as well as the detailed development sections in this guide.
